[package]
name = "Project2"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "./src/rbt",
    "./src/avl", "./src/common",
]


[dependencies]
rbt = { path = "./src/rbt" }
avl = { path = "./src/avl" }
common = {path = "./src/common"}
clap = { version = "4.5.20", features = ["derive"] }
